--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-three/controls": "^2.0.0-beta.8",
+    "@angular-three/core": "^6.0.1",
+    "@angular-three/postprocessing": "^6.0.1",
+    "@angular-three/soba": "^6.0.1",
     "@angular/animations": "^18.2.0",
     "@angular/cdk": "^18.1.2",
     "@angular/common": "^18.2.0",
@@ -22,12 +26,16 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.11",
+    "@babylonjs/core": "^7.40.1",
     "@fortawesome/angular-fontawesome": "^1.0.0",
     "@nebular/eva-icons": "14.0.2",
     "@nebular/theme": "^14.0.2",
+    "babylonjs": "^7.40.1",
+    "babylonjs-loaders": "^7.40.1",
     "eva-icons": "^1.1.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "three": "^0.171.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
@@ -39,6 +47,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@types/three": "^0.170.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
